# xinput-hook

./: CMakeLists.txt  xinput9_1_0.def
.github/workflows/: build.yml
src/: dllmain.cpp
